--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- TODO: Add some Google Fonts -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css">
 
-    <link rel="stylesheet" href="style.css">
+  <!-- Source Code Pro font -->
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+  <!-- Roboto Condensed font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
-    <!-- TODO: Update '<title>'. -->
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- 'Connect' JS to this HTML file. -->
-    <script src="./scripts.js"></script>
-  </body>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- TODO: Update '<title>'. -->
+  <title>DEV.to Mobile Recreation</title>
+</head>
+
+<body>
+
+
+  <!-- 'Connect' JS to this HTML file. -->
+  <script src="./scripts.js"></script>
+</body>
+
 </html>
