:bulb: Adding comments to delineate sections

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!-- TOP BAR -->
   <header>
     <div class="top-bar flex">
       <a href="dev.to">
@@ -36,6 +37,7 @@
       </div>
     </div>
   </header>
+  <!-- POSTS BAR -->
   <div class="posts-bar flex">
     <a href="#">
       <img class="icon" src="img/server.svg" alt="Server icon">
@@ -56,6 +58,7 @@
       <img class="icon" src="img/flash.svg" alt="Lightning bolt icon">
     </a>
   </div>
+  <!-- POSTS FEED -->
   <div class="posts-container flex flex--column">
     <div class="post-card flex">
       <div class="post-card--user flex flex--justify-center">
@@ -232,7 +235,6 @@
         <button class="save-btn">Save</button>
       </div>
     </div>
-
   </div>
 
   <!-- 'Connect' JS to this HTML file. -->
