:sparkles: Insert and style featured image at top of feed

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </header>
+
   <!-- POSTS BAR -->
   <div class="posts-bar flex">
     <a href="#">
@@ -58,6 +59,13 @@
       <img class="icon" src="img/flash.svg" alt="Lightning bolt icon">
     </a>
   </div>
+  <!-- FEED FEATURED IMAGE -->
+  <!-- TODO: Change this from its own section to logic to only display image from -->
+  <!-- a post if it is the FIRST post in the FEED -->
+  <div class="featured">
+    <img class="featured-img" src="img/topImg.jpeg" alt="Image of curly brackets">
+  </div>
+
   <!-- POSTS FEED -->
   <div class="posts-container flex flex--column">
     <div class="post-card flex">
