:lipstick: Fine tune spacing, font-size of top-bar and style search-bar and feed-select

--- a/client/index.html
+++ b/client/index.html
@@ -18,20 +18,20 @@
 <body>
   <!-- TOP BAR -->
   <header>
-    <div class="top-bar flex">
-      <a href="dev.to">
+    <div class="top-bar flex flex--align-center">
+      <a href="dev.to" class="top-bar-link flex flex--align-center">
         <img class="logo" src="img/devLogo.png" alt="DEV Community Logo">
       </a>
       <label for="search" class="screen-reader-text">Search</label>
-      <input type="text" name="search" id="search" class="search-bar" placeholder="Search">
-      <div class="top-bar--links flex flex--align-center flex--justify-end">
-        <a href="#">
+      <input type="text" name="search" id="search" class="search-bar" placeholder="Search...">
+      <div class="top-bar--links flex flex--align-center flex--justify-ar">
+        <a href="#" class="top-bar-link flex flex--align-center">
           <img class="icon" src="img/chatbox.svg" alt="Chat icon">
         </a>
-        <a href="#">
+        <a href="#" class="top-bar-link flex flex--align-center">
           <img class="icon" src="img/notifications.svg" alt="Notification icon">
         </a>
-        <a href="#">
+        <a href="#" class="top-bar-link flex flex--align-center">
           <img class="icon" src="img/person-sharp.svg" alt="Person icon">
         </a>
       </div>
